--- a/content/blocks/bronzium-projector.json
+++ b/content/blocks/bronzium-projector.json
@@ -18,11 +18,11 @@
 		},
 	},
 	"requirements": [
-		{ "item": "steel", "amount": 500 },
-		{ "item": "bronze", "amount": 250 },
-		{ "item": "thorium", "amount": 150 },
-		{ "item": "plastanium", "amount": 150 },
-		{ "item": "titanium", "amount": 200 },
+		{ "item": "bronzium", "amount": 325 },
+		{ "item": "bronze", "amount": 500 },
+		{ "item": "steel", "amount": 250 },
+		{ "item": "titanium", "amount": 400 },
+		{ "item": "phase-fabric", "amount": 50 },
 	],
 	"category": "crafting",
 	"idleSound": "respawning",
