Prettier code and added sprites

--- a/content/blocks/bronzium-projector.json
+++ b/content/blocks/bronzium-projector.json
@@ -24,7 +24,7 @@
 		{ "item": "titanium", "amount": 400 },
 		{ "item": "phase-fabric", "amount": 50 },
 	],
-	"category": "crafting",
+	"category": "effect",
 	"idleSound": "respawning",
 	"research": "bronzium-mender"
 }
